--- a/src/components/table/table.component.scss
+++ b/src/components/table/table.component.scss
@@ -67,6 +67,7 @@ table {
     font-family: ROBOTO-LIGHT;
     font-size: 0.9rem;
     font-weight: 500;
+    padding: 0 10px;
   }
 
   tr > .row-data:hover {
