--- a/src/pages/master/aos-user/item-master/create-item-master/create-item-master.component.html
+++ b/src/pages/master/aos-user/item-master/create-item-master/create-item-master.component.html
@@ -1,104 +1,3 @@
-<!-- <div class="container">
-  <form [formGroup]="form" (ngSubmit)="submit()">
-    <div class="form-row">
-      <mat-form-field appearance="outline">
-        <mat-label>Item Name</mat-label>
-        <input matInput formControlName="name" />
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>Item Code</mat-label>
-        <input matInput formControlName="code" />
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>Item Category</mat-label>
-        <mat-select formControlName="category">
-          @for (category of categories; track category.id) {
-          <mat-option [value]="category.id">{{ category.name }}</mat-option>
-          }
-        </mat-select>
-      </mat-form-field>
-    </div>
-    <div class="form-row">
-      <div class="flex">
-        <label for="">Item Picture (Fileupload/Image Link)</label>
-        <input
-          type="file"
-          #fileInput
-          hidden
-          (change)="onFileSelected($event)"
-        />
-        @if(selectedFile){
-        <p>
-          {{ selectedFile.name }}
-          <span class="remove" (click)="removeFile()">x</span>
-        </p>
-        }
-        <button mat-button type="button" (click)="fileInput.click()">
-          Select File
-        </button>
-      </div>
-      <mat-form-field appearance="outline">
-        <mat-label>Item Attribute(Color/Size)</mat-label>
-        <input matInput formControlName="attribute" />
-      </mat-form-field>
-    </div>
-    <div class="form-row">
-      <mat-form-field appearance="outline">
-        <mat-label>Size</mat-label>
-        <input matInput formControlName="size" />
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>Size Unit</mat-label>
-        <mat-select formControlName="sizeUnit">
-          @for (sizeUnit of sizeUnits; track sizeUnit) {
-          <mat-option [value]="sizeUnit">{{ sizeUnit }}</mat-option>
-          }
-        </mat-select>
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>Weight</mat-label>
-        <input matInput formControlName="weight" />
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>Weight Unit</mat-label>
-        <mat-select formControlName="weightUnit">
-          @for (weightUnit of weightUnits; track weightUnit) {
-          <mat-option [value]="weightUnit">{{ weightUnit }}</mat-option>
-          }
-        </mat-select>
-      </mat-form-field>
-    </div>
-    <div class="form-row">
-      <mat-form-field appearance="outline">
-        <mat-label>Packing Quantity</mat-label>
-        <input matInput formControlName="packingQty" />
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>Packing Quantity Unit</mat-label>
-        <mat-select formControlName="packingUnit">
-          @for (packingUnit of packingUnits; track packingUnit) {
-          <mat-option [value]="packingUnit">{{ packingUnit }}</mat-option>
-          }
-        </mat-select>
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>Minimum Order Quantity</mat-label>
-        <input matInput formControlName="minOrderQty" />
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>Item Brand</mat-label>
-        <input matInput formControlName="brand" />
-      </mat-form-field>
-    </div>
-    <div class="form-row">
-      <button mat-flat-button type="submit">Submit</button>
-      <button mat-button type="button" (click)="navigateToListItemPage()">
-        Cancel
-      </button>
-    </div>
-  </form>
-</div> -->
-
 <div class="container">
   <header>
     <h3>Create Item</h3>
@@ -138,18 +37,6 @@
       <input type="text" class="input-txt" formControlName="attribute">
     </div>
     <div class="input-field">
-      <label for="size">Size</label>
-      <input type="text" class="input-txt" formControlName="size">
-    </div>
-    <div class="input-field">
-      <label for="code">Size Unit</label>
-      <select formControlName="sizeUnit" required>
-        @for (sizeUnit of sizeUnits; track sizeUnit) {
-        <option [value]="sizeUnit">{{ sizeUnit }}</option>
-        }
-      </select>
-    </div>
-    <div class="input-field">
       <label for="weight">Weight</label>
       <input type="text" class="input-txt" formControlName="weight">
     </div>
@@ -166,7 +53,7 @@
       <input type="text" class="input-txt" formControlName="packingQty">
     </div>
     <div class="input-field">
-      <label for="packingUnit">Item Code</label>
+      <label for="packingUnit">Packing Quantity Unit</label>
       <select formControlName="packingUnit" required>
         @for (packingUnit of packingUnits; track packingUnit) {
         <option [value]="packingUnit">{{ packingUnit }}</option>
