--- a/src/dialogs/customer-billing/customer-billing.component.scss
+++ b/src/dialogs/customer-billing/customer-billing.component.scss
@@ -1,9 +1,9 @@
-@use "../../../../../constants/colors.scss" as color;
+@use "../../constants/colors.scss" as color;
 
 .container {
   width: 100%;
   background-color: #fff;
-  padding: 10px 50px 25px;
+  padding: 25px 50px;
   display: flex;
   flex-wrap: wrap;
 
@@ -33,8 +33,7 @@ h3 {
     margin: 5px 0 5px;
   }
 
-  input,
-  select {
+  input {
     height: calc(2.0625rem + 2px);
     padding: 0.375rem 0.75rem;
     border: 1px solid #ced4da;
@@ -44,54 +43,23 @@ h3 {
     color: #495057;
   }
 
-  input:focus,
-  select:focus {
-    outline-color: #abc7ff;
+  textarea {
+    padding: 0.375rem 0.75rem;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    font-size: 1rem;
+    background-color: #fff;
+    color: #495057;
   }
 
-  select {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxNCIgaGVpZ2h0PSIxNCIgdmlld0JveD0iMCAwIDE0IDE0Ij48cGF0aCBkPSJNMiA1bDYgNiA2LTZ6IiBmaWxsPSIjNTE1MTUxIi8+PC9zdmc+");
-    background-repeat: no-repeat;
-    background-position: right 10px center;
-    background-size: 12px;
+  input:focus,
+  textarea:focus {
+    outline-color: #abc7ff;
   }
 
   .imp {
     color: red;
     margin-left: 5px;
-  }
-
-  .input-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-
-    input {
-      flex: 1;
-      height: calc(2.0625rem + 2px);
-      padding: 0.375rem 2.5rem 0.375rem 0.75rem;
-      border: 1px solid #ced4da;
-      border-radius: 0.25rem;
-      font-size: 1rem;
-    }
-
-    .toggle-password {
-      position: absolute;
-      right: 0;
-      top: 50%;
-      transform: translateY(-50%);
-      background: none;
-      border: none;
-      cursor: pointer;
-
-      mat-icon {
-        font-size: 1.5rem;
-        color: color.$iconColor;
-      }
-    }
   }
 }
 
