--- a/src/pages/master/aos-user/item-price/edit-item-price-master/edit-item-price-master.component.scss
+++ b/src/pages/master/aos-user/item-price/edit-item-price-master/edit-item-price-master.component.scss
@@ -33,7 +33,8 @@ h3 {
     margin: 5px 0 5px;
   }
 
-  input {
+  input,
+  select {
     height: calc(2.0625rem + 2px);
     padding: 0.375rem 0.75rem;
     border: 1px solid #ced4da;
@@ -43,13 +44,54 @@ h3 {
     color: #495057;
   }
 
-  input:focus {
+  input:focus,
+  select:focus {
     outline-color: #abc7ff;
+  }
+
+  select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxNCIgaGVpZ2h0PSIxNCIgdmlld0JveD0iMCAwIDE0IDE0Ij48cGF0aCBkPSJNMiA1bDYgNiA2LTZ6IiBmaWxsPSIjNTE1MTUxIi8+PC9zdmc+");
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 12px;
   }
 
   .imp {
     color: red;
     margin-left: 5px;
+  }
+
+  .input-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    input {
+      flex: 1;
+      height: calc(2.0625rem + 2px);
+      padding: 0.375rem 2.5rem 0.375rem 0.75rem;
+      border: 1px solid #ced4da;
+      border-radius: 0.25rem;
+      font-size: 1rem;
+    }
+
+    .toggle-password {
+      position: absolute;
+      right: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      background: none;
+      border: none;
+      cursor: pointer;
+
+      mat-icon {
+        font-size: 1.5rem;
+        color: color.$iconColor;
+      }
+    }
   }
 }
 
