--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @use "@angular/material" as mat;
+@use "constants/colors.scss" as color;
 @import "primeicons/primeicons.css";
 
 @font-face {
@@ -54,4 +55,186 @@ border-radius: 5px !important;
 
 .mat-mdc-dialog-actions{
   flex-direction: row-reverse;
+}
+
+
+
+
+.form-container {
+  width: 100%;
+  background-color: #fff;
+  padding: 10px 50px 25px;
+  display: flex;
+  flex-wrap: wrap;
+
+  form {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px 30px;
+  }
+}
+
+h3 {
+  font-family: ROBOTO-MEDIUM;
+  font-weight: 400;
+  color: #76838f;
+}
+
+.input-field {
+  flex: 1 1 calc(33.333% - 20px);
+  display: flex;
+  flex-direction: column;
+  color: #495057;
+  font-family: ROBOTO-LIGHT;
+
+  label {
+    font-size: 0.875rem;
+    margin: 5px 0 5px;
+  }
+
+  input,
+  select {
+    height: calc(2.0625rem + 2px);
+    padding: 0.375rem 0.75rem;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    font-size: 1rem;
+    background-color: #fff;
+    color: #495057;
+  }
+
+  input:focus,
+  select:focus {
+    outline-color: #abc7ff;
+  }
+
+  select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxNCIgaGVpZ2h0PSIxNCIgdmlld0JveD0iMCAwIDE0IDE0Ij48cGF0aCBkPSJNMiA1bDYgNiA2LTZ6IiBmaWxsPSIjNTE1MTUxIi8+PC9zdmc+");
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 12px;
+  }
+
+  .imp {
+    color: red;
+    margin-left: 5px;
+  }
+
+  .input-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    input {
+      flex: 1;
+      height: calc(2.0625rem + 2px);
+      padding: 0.375rem 2.5rem 0.375rem 0.75rem;
+      border: 1px solid #ced4da;
+      border-radius: 0.25rem;
+      font-size: 1rem;
+    }
+
+    .toggle-password {
+      position: absolute;
+      right: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      background: none;
+      border: none;
+      cursor: pointer;
+
+      mat-icon {
+        font-size: 1.5rem;
+        color: color.$iconColor;
+      }
+    }
+  }
+}
+
+.action-btns {
+  display: flex;
+  justify-content: flex-start;
+  gap: 25px;
+  margin: 10px 0;
+
+  button {
+    padding: 0.5rem 1.5rem;
+    font-size: 1rem;
+    font-family: ROBOTO-LIGHT;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+
+    &[type="submit"] {
+      background-color: #007bff;
+      color: white;
+
+      &:hover {
+        background-color: #0056b3;
+      }
+    }
+
+    &[type="button"] {
+      background-color: #f8f9fa;
+      color: red;
+      border: 1px solid #ced4da;
+
+      &:hover {
+        background-color: #e2e6ea;
+      }
+    }
+  }
+}
+
+.customer-contact-persons {
+  display: flex;
+  flex-direction: column;
+  font-family: ROBOTO-LIGHT;
+}
+
+.contact-add {
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.customer-contact {
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  padding: 10px;
+  line-height: 1.3rem;
+  position: relative; 
+  font-size: 0.9rem;
+
+  .close {
+    position: absolute;
+    top: 5px; 
+    right: 5px; 
+    cursor: pointer; 
+  }
+}
+
+.flex {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.c-flex {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex-wrap: wrap;
 }
