--- a/src/pages/master/aos-user/item-master/create-item-master/create-item-master.component.html
+++ b/src/pages/master/aos-user/item-master/create-item-master/create-item-master.component.html
@@ -5,11 +5,11 @@
   <form [formGroup]="form" (ngSubmit)="submit()" ngNativeValidate>
     <div class="input-field">
       <label for="name">Item Name<span class="imp">*</span></label>
-      <input type="text" class="input-txt" formControlName="name" required>
+      <input type="text" formControlName="name" required>
     </div>
     <div class="input-field">
       <label for="code">Item Code</label>
-      <input type="text" class="input-txt" formControlName="code">
+      <input type="text" formControlName="code">
     </div>
     <div class="input-field">
       <label for="category">Item Category<span class="imp">*</span></label>
@@ -34,11 +34,11 @@
     </div>
     <div class="input-field">
       <label for="attribute">Item Attribute(Color/Size)</label>
-      <input type="text" class="input-txt" formControlName="attribute">
+      <input type="text" formControlName="attribute">
     </div>
     <div class="input-field">
       <label for="weight">Weight</label>
-      <input type="text" class="input-txt" formControlName="weight">
+      <input type="text" formControlName="weight">
     </div>
     <div class="input-field">
       <label for="weightUnit">Weight Unit</label>
@@ -50,7 +50,7 @@
     </div>
     <div class="input-field">
       <label for="packingQty">Packing Quantity</label>
-      <input type="text" class="input-txt" formControlName="packingQty">
+      <input type="text" formControlName="packingQty">
     </div>
     <div class="input-field">
       <label for="packingUnit">Packing Quantity Unit</label>
@@ -62,7 +62,7 @@
     </div>
     <div class="input-field">
       <label for="minOrderQty">Minimum Order Quantity</label>
-      <input type="text" class="input-txt" formControlName="minOrderQty">
+      <input type="text" formControlName="minOrderQty">
     </div>
     <div class="input-field">
       <label for="brand">Item Brand</label>
@@ -71,6 +71,14 @@
         <option [value]="brand.id">{{ brand.name }}</option>
         }
       </select>
+    </div>
+    <div class="input-field">
+      <label for="hsnCode">HSN Code</label>
+      <input type="text" formControlName="hsnCode">
+    </div>
+    <div class="input-field">
+      <label for="gst">GST Rate(in %)</label>
+      <input type="text" formControlName="gst">
     </div>
     <div class="input-field"></div>
     <div class="input-field"></div>
