--- a/src/pages/master/customer/customer-item-master/view-customer-item-master/view-customer-item-master.component.html
+++ b/src/pages/master/customer/customer-item-master/view-customer-item-master/view-customer-item-master.component.html
@@ -1,1 +1,63 @@
-<p>view-customer-item-master works!</p>
+<div class="container">
+    <header>
+        <div class="center">
+            <select (change)="onSelectRow($event)">
+                @for (row of rows; track row) {
+                <option [value]="row">{{ row }}</option>
+                }
+            </select>
+        </div>
+        <div>
+            <div class="input-container">
+                <input type="text" placeholder="Enter search term ..." [(ngModel)]="searchTxt" />
+                <button mat-icon-button class="search" (click)="search()">
+                    <mat-icon>search</mat-icon>
+                </button>
+            </div>
+        </div>
+    </header>
+    <br />
+    <div class="data">
+        <table>
+            <thead>
+                <tr>
+                    <th>S.No</th>
+                    <th>Item Name</th>
+                    <th>Item Code</th>
+                    <th>Customer</th>
+                    <th>Customer Item Name</th>
+                    <th>Customer Item Code</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                @for (item of items; track $index) {
+                <tr class="row-data">
+                    <td>{{ $index + 1 + offset() * limit() }}.</td>
+                    <td>{{ item.itemName }}</td>
+                    <td>{{ item.itemCode }}</td>
+                    <td>{{ item.customerName }}</td>
+                    <td>{{ item.itemAliasName }}</td>
+                    <td>{{ item.itemAliasCode }}</td>
+                    <td>
+                        <button mat-icon-button (click)="editData(item.id)">
+                            <mat-icon style="color: #76838F;" fontSet="material-icons-outlined">edit_note</mat-icon>
+                        </button>
+                        <button mat-icon-button (click)="deleteData(item.id)">
+                            <mat-icon style="color: #76838F;" fontSet="material-icons-outlined">delete</mat-icon>
+                        </button>
+                    </td>
+                </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    <div class="paginator">
+        @if(items.length){
+        <app-paginator (page)="navigate($event)" [size]="size" [records]="records" [from]="from()"
+            [to]="to()"></app-paginator>
+        } @else {
+        <h2>No Data in the table...</h2>
+        }
+    </div>
+</div>
