--- a/src/pages/master/customer/customer-item-master/create-customer-item-master/create-customer-item-master.component.html
+++ b/src/pages/master/customer/customer-item-master/create-customer-item-master/create-customer-item-master.component.html
@@ -1,39 +1,36 @@
 <div class="form-container">
-    <h3>1. Customer Detail</h3>
+    <h3>Create Customer Item</h3>
     <form [formGroup]="form">
         <div class="input-field">
             <label for="item">AOS Item Name<span class="imp">*</span></label>
             <select formControlName="item" (change)="onSelect($event)">
                 @for (item of items; track item) {
-                <option [value]="item.id">{{ item.name }}</option>
+                <option [value]="item.field">{{ item.value }}</option>
                 }
             </select>
-        </div>
-        <div class="input-field">
-            <label for="category">AOS Item Category<span class="imp">*</span></label>
-            <input type="text" formControlName="category">
         </div>
         <div class="input-field">
             <label for="customer">Select Customer<span class="imp">*</span></label>
             <select formControlName="customer">
                 @for (customer of customers; track customer) {
-                <option [value]="customer.id">{{ customer.customerName }}</option>
+                <option [value]="customer.field">{{ customer.value }}</option>
                 }
             </select>
         </div>
+        <div class="input-field"></div>
         <div class="input-field">
-            <label for="customerItemAlias">Customer Item Alias</label>
-            <input type="text" formControlName="customerItemAlias">
+            <label for="itemName">Customer Item Name Alias</label>
+            <input type="text" formControlName="itemName">
         </div>
         <div class="input-field">
-            <label for="customerItemCode">Customer Item code<span class="imp">*</span></label>
-            <input type="text" formControlName="customerItemCode">
+            <label for="itemCode">Customer Item Code Alias<span class="imp">*</span></label>
+            <input type="text" formControlName="itemCode">
         </div>
         <div class="input-field">
-            <label for="customerItemPrice">Customer Item Price <span class="imp">*</span></label>
-            <input type="text" formControlName="customerItemPrice" (keydown)="validateNumberInput($event)" required>
+            <label for="itemPrice">Customer Item Price <span class="imp">*</span></label>
+            <input type="text" formControlName="itemPrice" (keydown)="validateNumberInput($event)" required>
         </div>
-        <div class="input-field">
+        <!-- <div class="input-field">
             <label for="gst">GST Rate(in %) <span class="imp">*</span></label>
             <input type="text" formControlName="gst">
         </div>
@@ -44,10 +41,10 @@
         <div class="input-field">
             <label for="priceIncGST">Price including GST<span class="imp">*</span></label>
             <input type="text" formControlName="priceIncGST">
-        </div>
+        </div> -->
         <div class="action-btns">
             <button mat-flat-button type="submit" (click)="submit()">Submit</button>
-            <button mat-button type="button" (click)="navigateToListUserPage()">
+            <button mat-button type="button" (click)="navigateToListCustomerItemPage()">
                 Cancel
             </button>
         </div>
