--- a/src/components/layout/layout.component.scss
+++ b/src/components/layout/layout.component.scss
@@ -2,7 +2,7 @@
 
 .toolbar {
   height: 70px;
-  width: 100%;
+  width: auto;
   z-index: 5;
   display: flex;
   align-items: center;
@@ -72,7 +72,7 @@
 
 .body {
   display: flex;
-  height: calc(100vh - 70px);
+  height: calc(99.9vh - 70px);
   overflow: hidden;
 }
 
