--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,7 +61,7 @@ border-radius: 5px !important;
 
 
 .form-container {
-  width: 100%;
+  width: auto;
   background-color: #fff;
   padding: 10px 50px 25px;
   display: flex;
