--- a/src/components/layout/layout.component.scss
+++ b/src/components/layout/layout.component.scss
@@ -53,8 +53,8 @@
       color: #76838F;
     }
 
-    .username {
-      margin-right: 5px;
+    div > .username {
+      padding-right: 5px;
       font-family: ROBOTO-MEDIUM;
       color: #76838F;
     }
