--- a/src/components/table/table.component.html
+++ b/src/components/table/table.component.html
@@ -55,7 +55,7 @@
                 <tr class="row-data">
                     <td>{{ $index + 1 + offset() * limit() }}.</td>
                     <td>{{ item.firstName }}</td>
-                    <td>{{ item.middleName }}</td>
+                    <td>{{ item.middleName || '-' }}</td>
                     <td>{{ item.lastName }}</td>
                     <td>{{ item.email }}</td>
                     <td>{{ item.mobileNo }}</td>
@@ -205,7 +205,6 @@
                     <td>{{ $index + 1 + offset() * limit() }}.</td>
                     <td>{{ item.customerName }}</td>
                     <td>{{ item.contacts[0].name }}</td>
-                    <td>{{ item.code }}</td>
                     <td>{{ item.customerLoginPageUrl }}</td>
                     <td>{{ item.contacts[0].mobileNo }}</td>
                     <td>{{ item.contacts[0].name }}</td>
