--- a/src/pages/auth/login/login.component.html
+++ b/src/pages/auth/login/login.component.html
@@ -1,1 +1,18 @@
-<p>login works!</p>
+<div class="container">
+    <form [formGroup]="form" (ngSubmit)="submit()">
+        <div class="input-field">
+            <label for="code">Employee Code : </label>
+            <input type="text" formControlName="code" required>
+        </div>
+        <br>
+        <div class="input-field">
+            <label for="password">Password :</label> 
+            <input type="password" formControlName="password" required>
+        </div>
+        <br>
+        <div class="action-btns">
+            <button class="submit" type="submit">Login</button>
+            <button type="reset">Clear</button>
+        </div>
+    </form>
+</div>
