--- a/src/pages/master/aos-user/item-master/edit-item-master/edit-item-master.component.scss
+++ b/src/pages/master/aos-user/item-master/edit-item-master/edit-item-master.component.scss
@@ -1,7 +1,7 @@
 @use "../../../../../constants/colors.scss" as color;
 
 .container {
-  width: 100%;
+  width: auto;
   background-color: #fff;
   padding: 10px 50px 25px;
   display: flex;
@@ -15,25 +15,7 @@
   }
 }
 
-h3 {
-  font-family: ROBOTO-MEDIUM;
-  font-weight: 400;
-  color: #76838f;
-}
-
 .input-field {
-  flex: 1 1 calc(33.333% - 20px);
-  display: flex;
-  flex-direction: column;
-  color: #495057;
-  font-family: ROBOTO-LIGHT;
-
-  label {
-    font-size: 0.875rem;
-    margin: 5px 0 5px;
-  }
-
-  input,
   select {
     height: calc(2.0625rem + 2px);
     padding: 0.375rem 0.75rem;
@@ -44,11 +26,6 @@ h3 {
     color: #495057;
   }
 
-  input:focus,
-  select:focus {
-    outline-color: #abc7ff;
-  }
-
   select {
     appearance: none;
     -webkit-appearance: none;
@@ -57,41 +34,6 @@ h3 {
     background-repeat: no-repeat;
     background-position: right 10px center;
     background-size: 12px;
-  }
-
-  .imp {
-    color: red;
-    margin-left: 5px;
-  }
-
-  .input-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-
-    input {
-      flex: 1;
-      height: calc(2.0625rem + 2px);
-      padding: 0.375rem 2.5rem 0.375rem 0.75rem;
-      border: 1px solid #ced4da;
-      border-radius: 0.25rem;
-      font-size: 1rem;
-    }
-
-    .toggle-password {
-      position: absolute;
-      right: 0;
-      top: 50%;
-      transform: translateY(-50%);
-      background: none;
-      border: none;
-      cursor: pointer;
-
-      mat-icon {
-        font-size: 1.5rem;
-        color: color.$iconColor;
-      }
-    }
   }
 }
 
@@ -122,42 +64,6 @@ h3 {
 
     &:hover {
       background-color: color.$submitBtnHoverColor;
-    }
-  }
-}
-
-.action-btns {
-  display: flex;
-  justify-content: flex-end;
-  gap: 25px;
-  margin: 10px 0;
-
-  button {
-    padding: 0.5rem 1.5rem;
-    font-size: 1rem;
-    font-family: ROBOTO-LIGHT;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, color 0.3s ease;
-
-    &[type="submit"] {
-      background-color: color.$submitBtnColor;
-      color: white;
-
-      &:hover {
-        background-color: color.$submitBtnHoverColor;
-      }
-    }
-
-    &[type="button"] {
-      background-color: #f8f9fa;
-      color: #495057;
-      border: 1px solid #ced4da;
-
-      &:hover {
-        background-color: #e2e6ea;
-      }
     }
   }
 }
