--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,16 +49,13 @@ body {
 //   border-radius: 5px;
 // }
 
-.mat-mdc-dialog-surface{
-border-radius: 5px !important;
+.mat-mdc-dialog-surface {
+  border-radius: 5px !important;
 }
 
-.mat-mdc-dialog-actions{
+.mat-mdc-dialog-actions {
   flex-direction: row-reverse;
 }
-
-
-
 
 .form-container {
   width: auto;
@@ -95,7 +92,7 @@ h3 {
 
   input,
   select {
-    height: calc(2.0625rem + 2px);
+    height: 1.5rem;
     padding: 0.375rem 0.75rem;
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
@@ -205,6 +202,7 @@ h3 {
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 
 .customer-contact {
@@ -215,14 +213,14 @@ h3 {
   width: 200px;
   padding: 10px;
   line-height: 1.3rem;
-  position: relative; 
+  position: relative;
   font-size: 0.9rem;
 
   .close {
     position: absolute;
-    top: 5px; 
-    right: 5px; 
-    cursor: pointer; 
+    top: 5px;
+    right: 5px;
+    cursor: pointer;
   }
 }
 
